--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   ui:
     image: node:16-alpine
     working_dir: /web
+    env_file: .env
     entrypoint:
       - /bin/sh
       - "-c"
